--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,16 +9,14 @@ services:
     networks:
       - cgapp_net
     volumes:
-      - ./frontend/build:/usr/share/nginx/html
-      - ./webserver/configs/default.template.conf:/etc/nginx/conf.d/default.template.conf
-      - ./webserver/configs/nginx.conf:/etc/nginx/nginx.conf
+      - ./webserver/nginx/certbot.template.conf:/etc/nginx/conf.d/default.template.conf
+      - ./webserver/nginx/nginx.conf:/etc/nginx/nginx.conf
       - ./webserver/certbot/conf:/etc/letsencrypt
       - ./webserver/certbot/www:/var/www/certbot
     environment:
       - APP_DOMAIN=1wa.co
     ports:
       - 80:80
-      - 443:443
     restart: unless-stopped
     command: /bin/sh -c "envsubst < /etc/nginx/conf.d/default.template.conf > /etc/nginx/conf.d/default.conf && exec nginx -g 'daemon off;'"
 
