--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     container_name: nginx
     image: nginx:alpine
     networks:
-      - cgapp_net
+      - nginx_net
     volumes:
       - ./webserver/nginx/certbot.template.conf:/etc/nginx/conf.d/default.template.conf
       - ./webserver/nginx/nginx.conf:/etc/nginx/nginx.conf
@@ -24,7 +24,7 @@ services:
     container_name: certbot
     image: certbot/certbot
     networks:
-      - cgapp_net
+      - nginx_net
     volumes:
       - ./webserver/certbot/conf:/etc/letsencrypt
       - ./webserver/certbot/www:/var/www/certbot
@@ -34,5 +34,5 @@ services:
       - nginx
 
 networks:
-  cgapp_net:
-    name: cgapp_net
+  nginx_net:
+    name: nginx_net
