--- a/webserver/nginx/default.template.conf
+++ b/webserver/nginx/default.template.conf
@@ -53,7 +53,7 @@ server {
   add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
 
   # dot files
-  location ~* /\.(?!well-known) { deny all; }
+  location ~ /\.(?!well-known) { deny all; }
 
   # SEO files
   location = /robots.txt { log_not_found off; }
