--- a/webserver/nginx/default.template.conf
+++ b/webserver/nginx/default.template.conf
@@ -1,7 +1,7 @@
 # App server config for register SSL (Certbot)
 server {
   listen      80;
-  server_name .1wa.co;
+  server_name 1wa.co www.1wa.co;
 
   # Redirect to HTTPS
   location / { return 301 https://1wa.co$request_uri; }
