--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -10,7 +10,7 @@ services:
 
   nginx:
     volumes:
-      - ./frontend/build:/usr/share/nginx/html/
+      - ./frontend/build:/usr/share/nginx/html
       - ./webserver/nginx/default.conf:/etc/nginx/conf.d/default.conf
       - ./webserver/nginx/1wa.co.conf:/etc/nginx/sites-enabled/1wa.co.conf
       - ./webserver/nginx/nginx.conf:/etc/nginx/nginx.conf
