--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -11,6 +11,7 @@ services:
       - ./frontend/build:/usr/share/nginx/html
 
   nginx:
+    volumes:
       - ./webserver/nginx/default.conf:/etc/nginx/conf.d/default.conf
       - ./webserver/nginx/1wa.co.conf:/etc/nginx/sites-enabled/1wa.co.conf
       - ./webserver/nginx/nginx.conf:/etc/nginx/nginx.conf
