--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -8,10 +8,11 @@ services:
     build:
       context: ./frontend
     volumes:
-      - ./frontend/build:/usr/share/nginx/html
+      - static:/frontend/build
 
   nginx:
     volumes:
+      - static:/usr/share/nginx/html
       - ./webserver/nginx/default.conf:/etc/nginx/conf.d/default.conf
       - ./webserver/nginx/1wa.co.conf:/etc/nginx/sites-enabled/1wa.co.conf
       - ./webserver/nginx/nginx.conf:/etc/nginx/nginx.conf
@@ -22,3 +23,6 @@ services:
       - 443:443
     depends_on:
       - frontend
+
+volumes:
+  static:
