--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -8,18 +8,21 @@ services:
     build:
       context: ./frontend
     volumes:
-      - /static:/frontend/dist
+      - static:/frontend/dist
 
   nginx:
     volumes:
+      - static:/usr/share/nginx/html
       - ./webserver/nginx/default.conf:/etc/nginx/conf.d/default.conf
       - ./webserver/nginx/1wa.co.conf:/etc/nginx/sites-enabled/1wa.co.conf
       - ./webserver/nginx/nginx.conf:/etc/nginx/nginx.conf
       - ./webserver/certbot/conf:/etc/letsencrypt
       - ./webserver/certbot/www:/var/www/certbot
-      - /static:/usr/share/nginx/html
     ports:
       - 80:80
       - 443:443
     depends_on:
       - frontend
+
+volumes:
+  static:
