--- a/.github/workflows/test_build.yml
+++ b/.github/workflows/test_build.yml
@@ -15,7 +15,7 @@ jobs:
   # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -29,5 +29,5 @@ jobs:
           install_dependencies: true
 
       # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo "OK!"
+      - name: Copy build artifacts
+        run: cp -avr dist/ /usr/share/nginx/html
