--- a/.github/workflows/test_build.yml
+++ b/.github/workflows/test_build.yml
@@ -15,7 +15,7 @@ jobs:
   # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -29,5 +29,11 @@ jobs:
           install_dependencies: true
 
       # Runs a single command using the runners shell
-      - name: Copy build artifacts
-        run: cp -avr dist/ /usr/share/nginx/html
+      - name: Deploy to Staging server
+        uses: easingthemes/ssh-deploy@master
+        env:
+          SSH_PRIVATE_KEY: ${{ secrets.SERVER_SSH_KEY }}
+          SOURCE: "dist/"
+          REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
+          REMOTE_USER: ${{ secrets.REMOTE_USER }}
+          TARGET: "~/1wa.co/"
