--- a/.github/workflows/test_build.yml
+++ b/.github/workflows/test_build.yml
@@ -29,10 +29,12 @@ jobs:
           install_dependencies: true
 
       # Runs a single command using the runners shell
-      - name: Deploy to Staging server
-        uses: easingthemes/ssh-deploy@master
-        env:
-          SSH_PRIVATE_KEY: ${{ secrets.SERVER_SSH_KEY }}
-          SOURCE: "dist/"
-          REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
-          REMOTE_USER: ${{ secrets.REMOTE_USER }}
+      - name: copy file via ssh password
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.REMOTE_HOST }}
+          username: ${{ secrets.REMOTE_USER }}
+          key: ${{ secrets.SERVER_SSH_KEY }}
+          rm: true
+          source: "dist/"
+          target: "~/1wa.co"
