--- a/.github/workflows/test_build.yml
+++ b/.github/workflows/test_build.yml
@@ -34,7 +34,7 @@ jobs:
         with:
           host: ${{ secrets.REMOTE_HOST }}
           username: ${{ secrets.REMOTE_USER }}
-          key: ${{ secrets.SERVER_SSH_KEY }}
+          password: ${{ secrets.REMOTE_PASSWORD }}
           rm: true
           source: "dist/"
           target: "~/1wa.co"
